# cap-auto

./: .gitignore  LICENSE  MANIFEST.in  QUICKREF.md  README.md  cap_client_gui.py  cap_control_test.py  cap_server_gui.py  examples.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_diff_info.py  test_finalization_xml.py  test_proffit_xml.py  test_results_meta.py  test_results_viewer_csv.py  test_socket_ports.py
cap_auto/: cap_control.py  cap_control_legacy.py  cap_files.py  rod_image_reader.py  ty6_backend_tools.py  ty6_cython.pyx
doc/: GUI_TOOLS_GUIDE.md  MIGRATION.md  PORT_TROUBLESHOOTING.md
examples/: 01_image_visualization.ipynb  02_cap_automation.ipynb  README.md
scripts/: benchmark_ty6_backends.py
